--- a/css/common.css
+++ b/css/common.css
@@ -121,7 +121,7 @@ body {
   width: 100%;
   height: 2rem;
   line-height: 1.36rem;
-  background-color: #f4483e;
+  background-color: #ff841d;
   padding: 0.32rem 0.6rem;
 }
 .header .header_logo {
@@ -157,7 +157,7 @@ body {
   background-color: #f1f1f1;
   outline-style: none;
   vertical-align: middle;
-  font-size: 0.48rem;
+  font-size: 0.52rem;
 }
 .search button {
   position: absolute;
@@ -168,7 +168,7 @@ body {
   border-radius: 0.6rem;
   vertical-align: middle;
   color: #fff;
-  font-size: 0.48rem;
+  font-size: 0.52rem;
   background-color: #ff841d;
 }
 .footer {
@@ -195,7 +195,7 @@ body {
   border: 1px solid #ccc;
   float: left;
   text-align: center;
-  font-size: 0.4rem;
+  font-size: 0.56rem;
 }
 .footer .mapp {
   padding: 0.2rem;
@@ -204,10 +204,10 @@ body {
   background-color: #efefef;
 }
 .footer .mapp a {
-  font-size: 0.36rem;
+  font-size: 0.44rem;
   color: red;
 }
 .footer .mapp .domain {
   text-align: center;
-  font-size: 0.36rem;
+  font-size: 0.44rem;
 }
