--- a/less/baicaijia.less
+++ b/less/baicaijia.less
@@ -4,6 +4,10 @@
   position: relative;
 }
 
+.header{
+  background-color: #f4483e;
+}
+
 .bcj-title {
   height: 75rem/50;
   width: 100%;
@@ -155,5 +159,25 @@
       bottom: 0;
     }
 
+  }
+}
+
+.backTop {
+  width: 50rem/50;
+  height: 50rem/50;
+  border-radius:50%;
+  background-color: rgba(0,0,0,.5);
+  position: fixed;
+  z-index:999;
+  bottom:10rem/50;
+  right: 10rem/50;
+  span.fa-arrow-up{
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 50rem/50;
+    padding-left:12rem/50;
+    font-size:26rem/50;
+    color:rgba(255,255,255,.6);
   }
 }
