--- a/less/common.less
+++ b/less/common.less
@@ -61,7 +61,7 @@ html,body{
   width: 100%;
   height: 100rem/50;
   line-height:68rem/50;
-  background-color: #f4483e;
+  background-color: @mainColor;
   padding: 16rem/50 30rem/50;
 
   .header_logo {
@@ -101,7 +101,7 @@ html,body{
     background-color: #f1f1f1;
     outline-style: none;
     vertical-align: middle;
-    font-size:24rem/50;
+    font-size:26rem/50;
   }
 
   button{
@@ -113,7 +113,7 @@ html,body{
     border-radius: 30rem/50;
     vertical-align: middle;
     color: #fff;
-    font-size: 24rem/50;
+    font-size: 26rem/50;
     background-color: @mainColor;
   }
 
@@ -141,7 +141,7 @@ html,body{
       border: 1px solid #ccc;
       float: left;
       text-align: center;
-      font-size: 20rem/50;
+      font-size: 28rem/50;
     }
   }
   .mapp{
@@ -150,12 +150,12 @@ html,body{
     text-align: center;
     background-color: #efefef;
     a{
-      font-size: 18rem/50;
+      font-size: 22rem/50;
       color: red;
     }
     .domain{
       text-align: center;
-      font-size:18rem/50;
+      font-size:22rem/50;
     }
   }
 
