--- a/less/index.less
+++ b/less/index.less
@@ -18,6 +18,9 @@
       padding-bottom:10rem/50;
       text-align: center;
     }
+    &>ul li.hide{
+      display: none;
+    }
 
     img{
       width: 140rem/50;
@@ -26,7 +29,8 @@
     }
 
     p{
-      font-size: 16rem/50;
+      font-size: 26rem/50;
+      margin-top:10rem/50;
     }
 
   }
@@ -43,7 +47,7 @@
     span{
       height: 60rem/50;
       line-height:60rem/50;
-      font-size: 28rem/50;
+      font-size: 36rem/50;
     }
   }
 
@@ -75,7 +79,8 @@
       }
 
       .title{
-        font-size: 20rem/50;
+        font-size: 30rem/50;
+        font-weight:700;
         margin-top: 30rem/50;
         span{
           color: @mainColor;
@@ -88,11 +93,13 @@
         line-height: 20rem/50;
         position: absolute;
         bottom: 50rem/50;
-        font-size:20rem/50;
+        font-size:26rem/50;
 
         .comment{
           float: right;
-          margin-right:10rem/50;
+          font-size:26rem/50;
+
+          margin-right:30rem/50;
         }
       }
 
